--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,12 @@
-click==8.0.1
-Flask==2.0.1
-Flask-SQLAlchemy==2.5.1
-greenlet==1.1.0
-itsdangerous==2.0.1
-Jinja2==3.0.1
-MarkupSafe==2.0.1
-psycopg2==2.9.1
-python-dotenv==0.19.0
+click==7.1.2
+Flask==1.1.2
+Flask-SQLAlchemy==2.2.4
+greenlet==2.4.4
+itsdangerous==1.1.0
+Jinja2==2.11.3
+MarkupSafe==1.1.1
+pkg-resources==0.0.0
+psycopg2==2.8.6
+python-dotenv==0.15.0
 SQLAlchemy==1.3.23
-Werkzeug==2.0.1
+Werkzeug==1.0.1
