--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,70 @@
-click==7.1.2
-Flask==1.1.2
-Flask-SQLAlchemy==2.4.4
+aiohttp==3.7.4.post0
+astroid==2.5.6
+async-timeout==3.0.1
+atomicwrites==1.4.0
+attrs==21.2.0
+beautifulsoup4==4.9.3
+certifi==2020.12.5
+cffi==1.14.3
+chardet==4.0.0
+click==8.0.1
+colorama==0.4.4
+coverage==5.5
+cycler==0.10.0
+discord.py==1.7.1
+Flask==2.0.1
+Flask-SQLAlchemy==2.5.1
+Flask-WTF==0.14.3
 greenlet==1.1.0
-itsdangerous==1.1.0
-Jinja2==2.11.3
-MarkupSafe==1.1.1
-psycopg2==2.8.6
-python-dotenv==0.15.0
+gunicorn==20.1.0
+idna==2.10
+importlib-metadata==4.0.1
+iniconfig==1.1.1
+isort==5.8.0
+itsdangerous==2.0.1
+Jinja2==3.0.1
+kiwisolver==1.3.1
+lazy-object-proxy==1.6.0
+linecache2==1.0.0
+lineedit==0.1.5
+lxml==4.6.3
+MarkupSafe==2.0.1
+matplotlib==3.3.4
+mccabe==0.6.1
+mido==1.2.10
+multidict==5.1.0
+numpy==1.20.3
+packaging==20.9
+pandas==1.2.4
+Pillow==8.1.0
+pluggy==0.13.1
+psycopg2==2.9.1
+py==1.10.0
+pycparser==2.20
+pygame==2.0.1
+Pygments==2.7.2
+pylint==2.8.2
+pymongo==3.11.3
+pyparsing==2.4.7
+pytest==6.2.4
+python-dateutil==2.8.1
+python-dotenv==0.19.0
+pytz==2021.1
+radian==0.5.9
+rchitect==0.3.29
+requests==2.25.1
+six==1.16.0
+soupsieve==2.2.1
 SQLAlchemy==1.3.23
-Werkzeug==1.0.1
+toml==0.10.2
+traceback2==1.4.0
+typed-ast==1.4.3
+typing-extensions==3.10.0.0
+unittest2==1.1.0
+urllib3==1.26.4
+wcwidth==0.2.5
+Werkzeug==2.0.1
+wrapt==1.12.1
+WTForms==2.3.3
+yarl==1.6.3
+zipp==3.4.1
